--- a/angular.json
+++ b/angular.json
@@ -28,15 +28,15 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "./node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
               "src/assets/style/js/main.js",
-              "src/assets/style/lib/slick/slick.min.js",
-              "src/assets/style/lib/easing/easing.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "src/assets/style/lib/slick/slick.js",
+              "src/assets/style/lib/easing/easing.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
