--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bootstrap": "^5.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -33,6 +35,7 @@
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
