--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@auth0/angular-jwt": "^5.0.2",
     "angular-bootstrap-md": "^11.1.0",
     "angular-utils-pagination": "^0.11.1",
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ngx-cookie-service": "^12.0.0",
     "ngx-pagination": "^5.1.0",
     "ngx-slick-carousel": "^0.5.1",
@@ -41,6 +43,7 @@
     "@angular/compiler-cli": "~11.2.3",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
