--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "angular-bootstrap-md": "^11.1.0",
     "angular-utils-pagination": "^0.11.1",
     "bootstrap": "^5.0.1",
+    "chart.js": "^3.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ng2-charts": "^2.4.2",
     "ngx-cookie-service": "^12.0.0",
     "ngx-pagination": "^5.1.0",
     "ngx-slick-carousel": "^0.5.1",
